--- a/Bias-Variance-practice_KOR(Student).ipynb
+++ b/Bias-Variance-practice_KOR(Student).ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
    "source": [
     "## Polynomial Regression 을 이용하여 Sine graph 예측하기\n",
     "* Polynomial 모델을 이용하여 다항 함수가 아닌 sine 함수를 근사해보도록 합시다\n",
-    "1. 먼저 sine 함수 식을 통해서 Synthethic 데이터를 생성합니다\n",
+    "1. 먼저 sine 함수 식을 통해서 Synthetic 데이터를 생성합니다\n",
     "2. Synthetic 데이터에 noise를 일부 추가하고, Train/Test set으로 나눕니다. \n",
     "3. Train set을 이용하여 모델을 학습하고 Test set을 이용하여 모델의 성능을 평가합니다\n",
     "4. Regression 문제의 성능 지표인 Mean Squared loss와 Bias , Variance를 측정해봅니다\n"
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "Text(0.5, 1.0, 'True Distribution')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,16 +533,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7ffb715b8ba8>"
+       "<matplotlib.collections.PathCollection at 0x7f8d8b83d7f0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "Text(0.5, 1.0, 'Test Data')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "Text(0.5, 1.0, 'Ground Truth VS Predicted')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -713,15 +713,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exp_f_X 0.007891424824144495\n",
-      "y True 0.001729309867700285\n",
       "degree : 1 bias : 8.547223087599878 variance : 0.14839642346308748\n"
      ]
     }
@@ -745,8 +743,6 @@
     "\n",
     "exp_f_x/=num_sampling\n",
     "bias = (np.linalg.norm(exp_f_x-y_train))\n",
-    "print(\"Exp_f_X\",np.mean(exp_f_x))\n",
-    "print(\"y True\",np.mean(y_train))\n",
     "\n",
     "var = 0\n",
     "for j in range(num_sampling):\n",
@@ -1139,6 +1135,7 @@
     "Degree가 증가하면, Train data를 잘 학습하여셔 Bias는 감소합니다. <br>\n",
     "하지만 Training Data에 노이즈가 강하게 들어가 있으면 어떻게 될까요? <br>\n",
     "노이즈 마저 학습하여 Test MSE가 오히려 더 높아질 수 있습니다 . 아래 실습을 통해 해당 상황을 알아봅시다\n",
+    "\n",
     "---\n",
     "먼저 -20. -1 범위에서 추출한 y_noise data에 넣어줍시다"
    ]
@@ -1196,7 +1193,7 @@
    "metadata": {},
    "source": [
     "#### Practice 5\n",
-    "* 위에서 배운 방법들을 이용해서 Degree가 5, 10 일 때의 다음 값들을 구하세요\n",
+    "* 위에서 배운 방법들을 이용해서 데이터에 노이즈가 심한 상황에서 Degree가 5, 10 일 때의 다음 값들을 구하세요\n",
     "* Bias , Variance, Train mse , Test mse  \n",
     "* Ground Truth (y_true) 와 Predicted 비교\n"
    ]
@@ -1500,9 +1497,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "samsung",
+   "display_name": "samsung_bias",
    "language": "python",
-   "name": "samsung"
+   "name": "samsung_bias"
   },
   "language_info": {
    "codemirror_mode": {
