--- a/Bias-Variance-practice_KOR(Student).ipynb
+++ b/Bias-Variance-practice_KOR(Student).ipynb
@@ -858,7 +858,7 @@
     "exp_f_x = np.zeros(len(x_train))\n",
     "\n",
     "for i in range(num_sampling):\n",
-    "    x_train_sample, y_train_sample, y_train_true = ?? # Sample 를 뽑아주는 함수\n",
+    "    x_train_sample, y_train_sample, y_train_true = ?? # Sample 를 뽑아주는 함수 (Sample ratio = 0.3)\n",
     "    model = ??\n",
     "    model.fit(??)\n",
     "    exp_f_x += model.predict(x_train[:, np.newaxis])\n",
